--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -93,4 +93,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itemDescription" />
+
+    <TextView
+        android:id="@+id/E"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="E"
+        app:layout_constraintEnd_toStartOf="@+id/itemPrice"
+        app:layout_constraintTop_toBottomOf="@+id/itemImage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
