--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -72,4 +72,13 @@
         app:layout_constraintStart_toEndOf="@+id/cartItemTotalPrice"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/E_Cart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="E"
+        app:layout_constraintEnd_toStartOf="@+id/cartItemTotalPrice"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
