Updated the layout. Added phone number inout.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,8 +84,8 @@
             android:id="@+id/signin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#152421"
             android:text="Login"
+            android:background="@drawable/btn_gradient_style"
             android:textColor="#fff"
             android:textSize="26sp"
             android:textStyle="bold"
