--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,12 +8,21 @@
     android:background="#152421">
 
     <ImageView
+        android:id="@+id/img_splash"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="900dp"
+        android:elevation="2dp"
         android:src="@drawable/new_fallow"
+        app:layout_constraintVertical_bias="0"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.cuberto.liquid_swipe.LiquidPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
