--- a/app/src/main/res/drawable/btn_gradient_style.xml
+++ b/app/src/main/res/drawable/btn_gradient_style.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="20dp"/>
-    <gradient android:startColor="@color/gradient_start_color"
-        android:endColor="@color/gradient_end_color"/>
+    <gradient android:startColor="@color/black"
+        android:endColor="@color/black"/>
 </shape>
