--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,13 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".ForgotPassword">
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/scr_forgotp" />
+
     <EditText
         android:id="@+id/email"
         android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="268dp"
         android:hint="Enter your email"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
@@ -26,12 +36,13 @@
         android:id="@+id/resetPassword"
         android:layout_width="380dp"
         android:layout_height="70dp"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="#0ED6B9"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/btn_gradient_style"
         android:text="Reset Password"
         android:textColor="#ffff"
         android:textSize="26sp"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.387"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
