--- a/app/src/main/res/layout/layout_item.xml
+++ b/app/src/main/res/layout/layout_item.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="2dp">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="4dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginBottom="4dp"
+    android:background="@color/tab_indicator_gray"
+    >
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/account_scr" />
 
     <TextView
         android:layout_width="20dp"
@@ -21,11 +34,11 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:src="@drawable/logo_fallow"
+            android:id="@+id/img_acc"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:padding="5dp"
-            android:id="@+id/img_acc"/>
+            android:src="@drawable/logo_fallow" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
