--- a/app/src/main/res/layout/delivery_item.xml
+++ b/app/src/main/res/layout/delivery_item.xml
@@ -66,13 +66,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/deliveryAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/totalToPay" />
 
     <Button
         android:id="@+id/deliveryStartDelivery"
@@ -121,5 +121,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/deliveryUnable"
         app:layout_constraintTop_toBottomOf="@+id/deliveryConfirmDelivery" />
+
+    <TextView
+        android:id="@+id/totalToPay"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deliveryAddress" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
